# fastwindingnumber

./: .gitignore  CMakeLists.txt  README.md
data/: sample_points.xyz
include/fwn/: FastWindingNumber.h  IO.h  Mesh.h  Vec3.h
src/: FastWindingNumber.cpp  IO.cpp
tests/: basic_test.cpp
tools/: fwn_benchmark.cpp  fwn_query.cpp
